@@ -13,6 +13,7 @@ import mindustry.logic.SugarCanvas;
 import mindustry.logic.SugarStatements;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -72,10 +73,10 @@ public class ContainerModule extends DataModule{
     /** analyze 阶段方法糖解析用的轻量声明扫描（不依赖 collect 注册表）。 */
     @Override
     public Map<String, String> declaredKinds(LStatement statement){
-        if(statement instanceof StackDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), KIND_STACK);
-        if(statement instanceof QueueDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), KIND_QUEUE);
-        if(statement instanceof DequeDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Map.of(card.name.trim(), KIND_DEQUE);
-        return Map.of();
+        if(statement instanceof StackDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), KIND_STACK);
+        if(statement instanceof QueueDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), KIND_QUEUE);
+        if(statement instanceof DequeDeclStatement card && card.name != null && !card.name.trim().isEmpty()) return Collections.singletonMap(card.name.trim(), KIND_DEQUE);
+        return Collections.emptyMap();
     }
 
     @Override
